--- a/BDTHPlugin/BDTHPlugin.csproj
+++ b/BDTHPlugin/BDTHPlugin.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DalamudPackager" Version="2.1.8" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
   </ItemGroup>
 
